clean up project with intelj style